--- a/message-parser/Cargo.toml
+++ b/message-parser/Cargo.toml
@@ -4,5 +4,6 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+byteorder = "1.5.0"
 rumqttc = "0.24.0"
 rusqlite = { version = "0.32.0", features = ["bundled"] }
