--- a/device-code/platformio.ini
+++ b/device-code/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 monitor_speed = 115200
 lib_deps = 
 	adafruit/DHT sensor library@^1.4.6
+	adafruit/Adafruit SGP30 Sensor@^2.0.3
 	adafruit/Adafruit BME280 Library@^2.2.4
 	adafruit/Adafruit CCS811 Library@^1.1.3
 	adafruit/Adafruit Unified Sensor@^1.1.14
